--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/utils.css">
 
     <!-- <link rel="stylesheet" href="./css/navstyle1.css"> -->
-    <link rel="stylesheet" href="/All-pages-Header/custom.css">
+    <!-- <link rel="stylesheet" href="/All-pages-Header/custom.css"> -->
 </head>
 
 <div id="header" style="width:125% ; margin-left: -12.5%;"></div>
@@ -33,7 +33,7 @@
             <p class="text-center">DON'T MISS OUT</p>
             <p class="text-center">New Arrivals</p>
             <p class="text-center">Proenza schouler, Magda Butrym,Alemais, Balmain...</p>
-            <p class="buttons button-padding"><a href="/Suraj-all-work/womensinner/womeninner.html">SHOP NOW &nbsp;<span>>></span></a></p>
+            <p class="buttons button-padding"><a href="./routes/productlist.html">SHOP NOW &nbsp;<span>>></span></a></p>
 
         </div>
 
@@ -53,7 +53,7 @@
         <div class="block-1 grid">
             <div class="link">
                 <img src="https://img.mytheresa.com/media/static/raw/cms/l/WW_HP_2022_CW24/ActboxTall_Loro_Piana_Resor_Collection_2x_20220613121847.jpg?imwidth=600&imdensity=1" alt="">
-                <p class="buttons button-padding"><a href="/Suraj-all-work/womensinner/womeninner.html">SHOP NOW &nbsp;<span>>></span></a></p>
+                <p class="buttons button-padding"><a href="./routes/productlist.html">SHOP NOW &nbsp;<span>>></span></a></p>
             </div>
             <div onclick="sendal()">
                 <img src="https://img.mytheresa.com/media/static/raw/cms/l/WW_HP_2022_CW24/CW24_ActboxSmall_2x__20220612214303.jpg?imwidth=600&imdensity=1" alt="">
@@ -70,7 +70,7 @@
             </div>
             <div class="link">
                 <img src="https://img.mytheresa.com/media/static/raw/cms/l/WW_HP_2022_CW24/CW24_ActboxSmall_2x_2_20220612214253.jpg?imwidth=600&imdensity=1" alt="">
-                <p class="buttons"><a href="/Suraj-all-work/womensinner/womeninner.html">SHOP NOW &nbsp;<span>>></span></a></p>
+                <p class="buttons"><a href="./routes/productlist.html">SHOP NOW &nbsp;<span>>></span></a></p>
             </div>
         </div>
         <div class="flex space-around tagline font-family text-center">
@@ -89,11 +89,11 @@
         <div class="block-2 grid">
             <div class="link">
                 <img src="https://img.mytheresa.com/media/static/raw/cms/l/WW_HP_2022_CW24/Aquazzura_ActTall_2x_20220612215135.jpg?imwidth=600&imdensity=1" alt="">
-                <p class="buttons button-padding"><a href="/Suraj-all-work/womensinner/womeninner.html">SHOP NOW &nbsp;<span>>></span></a></p>
+                <p class="buttons button-padding"><a href="./routes/productlist.html">SHOP NOW &nbsp;<span>>></span></a></p>
             </div>
             <div class="link">
                 <img src="https://img.mytheresa.com/media/static/raw/cms/l/WW_HP_2022_CW24/CW24_ActboxSmall_2x_3_20220612214253.jpg?imwidth=600&imdensity=1" alt="">
-                <p class="buttons"><a href="/Suraj-all-work/womensinner/womeninner.html">SHOP NOW &nbsp;<span>>></span></a></p>
+                <p class="buttons"><a href="./routes/productlist.html">SHOP NOW &nbsp;<span>>></span></a></p>
             </div>
             <div class="font-family text-center">
                 <br>
@@ -106,7 +106,7 @@
             </div>
             <div class="link">
                 <img src="https://img.mytheresa.com/media/static/raw/cms/l/WW_HP_2022_CW24/CW24_ActboxSmall_2x_4_20220612214309.jpg?imwidth=600&imdensity=1" alt="">
-                <p class="buttons"><a href="/Suraj-all-work/womensinner/womeninner.html">SHOP NOW &nbsp;<span>>></span></a></p>
+                <p class="buttons"><a href="./routes/productlist.html">SHOP NOW &nbsp;<span>>></span></a></p>
             </div>
         </div>
 
@@ -137,7 +137,7 @@
         </div>
 
         <div class="last-button link">
-            <p class="buttons"> <a href="/Suraj-all-work/womensandalinner/womensandalinner.html"> SHOP NOW <span>>></span></a> </p>
+            <p class="buttons"> <a href="./routes/productlist.html"> SHOP NOW <span>>></span></a> </p>
         </div>
     </div>
     <div id="footer">
@@ -158,7 +158,7 @@
     }
 
     function womanpage(event) {
-        // window.location.href = "/Suraj-all-work/womensinner/womeninner.html"
+        window.location.href = "./routes/productlist.html"
     }
 
     function sendal(event) {
