--- a/routes/header.html
+++ b/routes/header.html
@@ -33,14 +33,14 @@
         <div>
             <ul>
                 <li>
-                    <a href="/Suraj-all-work/signup.html">Signup for Newsletter</a>
+                    <a href="../routes/signup.html">Signup for Newsletter</a>
                 </li>
                 <li>
-                    <a href="/Suraj-all-work/myaccinfo.html">My account</a>
+                    <a href="../routes/myaccount.html">My account </a>
                  
                 </li>
                 <li>
-                    <a href="/addtocart/cart.html">My wishlist</a> <span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="11"
+                    <a href="../routes/cart.html">My wishlist</a> <span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="11"
                             fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
                             <path
                                 d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
@@ -61,7 +61,7 @@
         </div>
         <div id="bag">
             <div>
-                <p> <a href="/addtocart/cart.html">shopping bag</a></p>
+                <p> <a href="../routes/cart.html">shopping bag</a></p>
 
             </div>
             <div class="cartPage">
