--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,12 +8,12 @@
     <title>Mytheresa</title>
     <link rel="stylesheet" href="./css/women.css">
     <link rel="stylesheet" href="./css/utils.css">
-
+    <link rel="stylesheet" href="./css/header.css">
     <!-- <link rel="stylesheet" href="./css/navstyle1.css"> -->
     <!-- <link rel="stylesheet" href="/All-pages-Header/custom.css"> -->
 </head>
 
-<div id="header" style="width:125% ; margin-left: -12.5%;"></div>
+<div id="header"></div>
 
 <body>
 
