--- a/frontend/routes/cart.html
+++ b/frontend/routes/cart.html
@@ -14,10 +14,6 @@
 <body>
 
     <div id="header"></div>
-
-
-    <!-- mythersa logo -->
-
     <br>
 
     <div id="shopingbag">
@@ -26,7 +22,7 @@
         </div>
         <div><button class="btn">PROCEED TO CHECKOUT</button></div>
     </div>
-    <!-- cart product -->
+
     <div id="cartproduct">
         <table>
             <thead>
@@ -38,28 +34,7 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- <tr> -->
-                <!-- <td> -->
-                <!-- <div id="pimage">   div1 -->
-                <!-- <div id="image">  div2 -->
-                <!-- <img src="https://img.mytheresa.com/240/240/90/jpeg/catalog/product/c5/P00678655.jpg" alt=""> -->
-                <!-- </div> -->
-                <!-- <div id="para">   div3 -->
-                <!-- <p>Androgyne side table base Size: - / One size fits all</p>
-                        <button>X Remove</button>
-                      </div>
-                    successful 
-                    </div>
-                </td> -->
-                <!-- <td>677</td> td2 -->
-                <!-- <td id="btn"><button> -</button> <span> 0</span> <button>+</button></td> td3  -->
-                <!-- <td>9787</td> td4 -->
-
-                <!-- <td> <img src="https://media.istockphoto.com/vectors/garbage-bin-sign-vector-id1139466631?k=20&m=1139466631&s=612x612&w=0&h=F3hOMYdQTDn4NFEi94i9StIbDxJ1v7mX79lDxz1cXLk=" alt=""></td>
-                <td>10$</td>
-              </tr> -->
-
-
+    
             </tbody>
         </table>
         <hr/>
@@ -104,3 +79,4 @@
 </html>
 <script src="https://kit.fontawesome.com/910e606fce.js" crossorigin="anonymous"></script>
 <script src="../script/cart.js"></script>
+<script src="../script/headerfooter.js"></script>
