--- a/frontend/routes/productlist.html
+++ b/frontend/routes/productlist.html
@@ -9,11 +9,6 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300&family=Poppins:ital,wght@0,200;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/productlist.css">
-    <!-- <link rel="stylesheet" href="./css/women.css">
-    <link rel="stylesheet" href="./css/utils.css"> -->
-
-    <!-- <link rel="stylesheet" href="/All-pages-Header/navstyle.css"> -->
-    <!-- <link rel="stylesheet" href="../css/custom.css"> -->
 </head>
 
 <body>
@@ -56,8 +51,7 @@
             </ul>
         </div>
     </div>
-    <!-- Upper part end here -->
-    <!-- body part start here -->
+
     <div id="body">
         <div id="left_section">
             <div>
@@ -155,48 +149,30 @@
 
                 <p class="bold">Colours</p>
                 <label class="container">
-                <!-- <input type="checkbox" checked="checked"><span class="bolder">Biege</span>
-                <span class="checkmark"></span> -->
                 <span class="dot"></span> <span class="bolder">  Red</span>
               </label>
                 <label class="container">
-                <!-- <input type="checkbox" ><span class="bolder">Black</span>
-                <span class="checkmark"></span> -->
                 <span class="dot" style="background-color:peachpuff"></span> <span class="bolder">  Peach</span>
               </label>
                 <label class="container">
-                <!-- <input type="checkbox"><span class="bolder">blue/span>
-                <span class="checkmark"></span> -->
                 <span class="dot" style="background-color:rgb(64, 144, 235)"></span> <span class="bolder">  Blue</span>
               </label>
                 <label class="container">
-                <!-- <input type="checkbox">Brown
-                <span class="checkmark"></span> -->
                 <span class="dot" style="background-color:brown"></span> <span class="bolder">  Brown</span>
               </label>
                 <label class="container">
-                <!-- <input type="checkbox">Gold
-                <span class="checkmark"></span> -->
-                <span class="dot" style="background-color:rgb(252, 96, 122)"></span> <span class="bolder">  pink</span>
+                 <span class="dot" style="background-color:rgb(252, 96, 122)"></span> <span class="bolder">  pink</span>
               </label>
                 <label class="container">
-                <!-- <input type="checkbox">Green
-                <span class="checkmark"></span> -->
                 <span class="dot" style="background-color:black"></span> <span class="bolder">  Black</span>
               </label>
                 <label class="container">
-                <!-- <input type="checkbox">Grey
-                <span class="checkmark"></span> -->
                 <span class="dot" style="background-color:orange"></span> <span class="bolder">  Orange</span>
               </label>
                 <label class="container">
-                <!-- <input type="checkbox">Metalic
-                <span class="checkmark"></span> -->
-                <span class="dot" style="background-color:yellow"></span> <span class="bolder">  Yellow</span>
+             <span class="dot" style="background-color:yellow"></span> <span class="bolder">  Yellow</span>
               </label>
                 <label class="container">
-                <!-- <input type="checkbox">Metalic
-                <span class="checkmark"></span> -->
                 <span class="dot" style="background-color:purple"></span> <span class="bolder">  Purple</span>
               </label>
             </div>
@@ -215,3 +191,4 @@
 <script src="https://kit.fontawesome.com/910e606fce.js" crossorigin="anonymous"></script>
 <script src="../script/productlist.js">
 </script>
+<script src="../script/headerfooter.js"></script>
