--- a/frontend/routes/success.html
+++ b/frontend/routes/success.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        .js002 {
+        .success {
             margin-top: 100px;
             margin-left: 400px;
             width: 50%;
@@ -21,26 +21,30 @@
             display: block;
             margin-top: 20px;
         }
+
+        .btn:hover{
+            cursor: pointer;
+        }
     </style>
 </head>
 
 <body>
-    <div class="js001">
-        <div class="js002">
+    <div>
+        <div class="success">
             <img src="https://dd311b21463486cea6e6-ba57f67b7c05f7cbe632f35f74bd7340.ssl.cf3.rackcdn.com/Checkout/checkmark.svg" alt="" class="oneimg" height="80px" />
             <h1 class="order_name">
                 Order Successful Thank You ! <span class="name"></span>
             </h1>
             <h5>Thank you for using our services</h5>
             <h4>
-                Your Order number is <span style="color: chocolate">5754254</span>
+                Your Order number is <span style="color: chocolate">12345</span>
             </h4>
             <h4>
                 Product will be delivered with in
-                <span style="color: green">4-6 businesss days</span>
+                <span style="color: green">3-4 businesss days</span>
             </h4>
 
-            <button>
+            <button class="btn">
                 CONTINUE SHOPPING
             </button>
         </div>
